Fixed footer overlapping content

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -31,7 +31,7 @@ body {
 
 }
 .footer {
-  position: absolute;
+  position: relative;
   top: 83%;
   width: 100%; 
   background-color: #8DAF2D;
